--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,9 @@ a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {color: 
 .services .services-item:hover {box-shadow: 0 0 30px rgba(0, 0, 0, .2)}
 .services .services-item .icon {width: 60px;margin: 5px;background: #fff;border-radius: 50%;box-shadow: 0 0 10px rgba(0, 0, 0, .2);text-align: center;transition: all .3s ease-in-out 0s;-moz-transition: all .3s ease-in-out 0s;-webkit-transition: all .3s ease-in-out 0s;-o-transition: all .3s ease-in-out 0s}
 .services .services-item .icon .img-fluid {width: 55px;padding: 10px}
-
+@media (min-width: 1200px) {
+    .container {max-width: 1400px;}
+}
 /* TIMELINE */
 .timeline {position: relative}
 .timeline .timeline-item{margin: 50px 0;}
@@ -179,9 +181,6 @@ a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {color: 
 
 @media(min-width: 500px){
     .timeline .content-text{flex-basis: 210px;}
-}
-@media (min-width: 1200px) {
-    .timeline .container {max-width: 1800px;}
 }
 
 /* CONTACTO*/
