--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,9 +156,9 @@ a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {color: 
 
 /* CONOCIMIENTOS */
 .services {background: #f0f0f0;}
-.services .section-title {color: #252525;font-size: 38px;text-align: center;letter-spacing: 1px;line-height: 1;margin-bottom: 48px;padding: 0 10px;position: relative}
+.services .section-title {color: #252525;font-size: 38px;text-transform: uppercase; text-align: center;letter-spacing: 1px;line-height: 1;margin-bottom: 48px;padding: 0 10px;position: relative}
 .services .container{display: flex;flex-flow: row wrap;align-items: center;justify-content: center;}
-.services .services-item:hover {box-shadow: 0 0 30px rgba(0, 0, 0, .2)}
+.services .services-item{box-shadow: 0px 17px 78px rgb(0 180 217);padding: 10px 0;border-radius: 10px;background: #252525;}
 .services .services-item .icon {width: 60px;margin: 5px;background: #fff;border-radius: 50%;box-shadow: 0 0 10px rgba(0, 0, 0, .2);text-align: center;transition: all .3s ease-in-out 0s;-moz-transition: all .3s ease-in-out 0s;-webkit-transition: all .3s ease-in-out 0s;-o-transition: all .3s ease-in-out 0s}
 .services .services-item .icon .img-fluid {width: 55px;padding: 10px}
 @media (min-width: 1200px) {
@@ -173,8 +173,9 @@ a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {color: 
 .timeline .timeline-title i{padding-right: 10px;line-height: 1;font-size: 26px;}
 .timeline .timeline-title i:before{line-height: 30px}
 .timeline .timeline-title h2{line-height: 30px;color: #00b4d9;}
-.timeline .content-text{margin: 15px 15px 0 0;flex-basis: 156px; border: 3px solid #00b4d9;border-radius: 20px;overflow: hidden;}
+.timeline .content-text{margin: 15px 15px 0 0;flex-basis: 156px; border: 3px solid #00b4d9;border-radius: 20px;overflow: hidden;box-shadow: 5px 3px 3px 1px;}
 .timeline .content-title{background-color: #f0f0f0;padding: 10px;}
+.timeline .experience .content-title:hover{background-color: skyblue;}
 .timeline .experience-content .content-title:hover{cursor: pointer}
 .timeline .content-info{padding: 10px;display: none}
 
